--- a/index.html
+++ b/index.html
@@ -19,10 +19,14 @@
             </ul>
         </nav>
     </header>
-    <section>
-        <h2>
+    <section class="m-4">
+        <h2 class="text-center my-10 text-xl">
             Selamat Datang di MovieDB - Jelajahi Dunia Film yang Tak Terbatas!
         </h2>
+        <div class="m-auto my-10 w-3/4 flex items-center">
+            <input type="text" class="w-full bg-transparent border-2 border-black p-2">
+            <input type="button" class="w-2/12 border-2 border-black p-2 border-l-0 cursor-pointer" value="Search">
+        </div>
     </section>
     <section class="m-2">
         <div class="flex items-center">
