--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - Movie DB</title>
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/output.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
+
 <body class="bg-zinc-200">
     <header class="p-4 flex justify-between items-center text-white  bg-gray-800">
         <h2 class="logo text-3xl font-bold">MovieDB</h2>
@@ -19,13 +22,16 @@
             </ul>
         </nav>
     </header>
-    <section class="m-4">
-        <h2 class="text-center my-10 text-xl">
-            Selamat Datang di MovieDB - Jelajahi Dunia Film yang Tak Terbatas!
-        </h2>
-        <div class="m-auto my-10 w-3/4 flex items-center">
-            <input type="text" class="w-full bg-transparent border-2 border-black p-2">
-            <input type="button" class="w-2/12 border-2 border-black p-2 border-l-0 cursor-pointer" value="Search">
+    <section class="bg-[url('../image/bg3.jpg')] bg-center bg-no-repeat bg-cover">
+        <div class="py-16 backdrop-blur-md bg-black/30 text-white">
+            <h2 class="text-center my-10 text-xl">
+                Selamat Datang di MovieDB - Jelajahi Dunia Film yang Tak Terbatas!
+            </h2>
+            <div class="m-auto my-10 w-3/4 flex items-center">
+                <input type="text" class="w-full bg-transparent border-2 border-black p-2"
+                    placeholder="Cari sebuah Movie, TV-Series, Actor">
+                <input type="button" class="w-2/12 border-2 border-black p-2 border-l-0 cursor-pointer" value="Search">
+            </div>
         </div>
     </section>
     <section class="m-2">
@@ -38,9 +44,9 @@
             </h3>
         </div>
         <div class="trendingMovie overflow-auto flex">
-
         </div>
     </section>
     <script src="script/script.js"></script>
 </body>
+
 </html>
