--- a/index.html
+++ b/index.html
@@ -6,46 +6,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - Movie DB</title>
     <link rel="stylesheet" href="style/style.css">
-    <link rel="stylesheet" href="style/output.css">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="style/output.css">    
 </head>
 
 <body class="bg-zinc-200">
-    <header class="p-4 flex justify-between items-center text-white  bg-gray-800">
+    <header class="p-4 flex justify-between items-center text-white blue2">
         <h2 class="logo text-3xl font-bold">MovieDB</h2>
         <nav class="float-righ">
             <ul class="flex text-gray-300">
-                <li class="mx-2 p-1 px-2 rounded-md hover:text-white hover:bg-gray-700"><a href="#">Movie</a></li>
-                <li class="mx-2 p-1 px-2 rounded-md hover:text-white hover:bg-gray-700"><a href="#">TV Series</a></li>
-                <li class="mx-2 p-1 px-2 rounded-md hover:text-white hover:bg-gray-700"><a href="#">People</a></li>
+                <li class="mx-2 p-1 px-2 rounded-md hover:text-white hover:bg-blue-400"><a href="#">Movie</a></li>
+                <li class="mx-2 p-1 px-2 rounded-md hover:text-white hover:bg-blue-400"><a href="#">TV Series</a></li>
+                <li class="mx-2 p-1 px-2 rounded-md hover:text-white hover:bg-blue-400"><a href="#">People</a></li>
             </ul>
         </nav>
     </header>
-    <section class="bg-[url('../image/bg3.jpg')] bg-center bg-no-repeat bg-cover">
-        <div class="py-16 backdrop-blur-md bg-black/30 text-white">
-            <h2 class="text-center my-10 text-xl">
+    <section class="bg-[url('../image/bg3.jpg')] bg-center bg-no-repeat bg-cover shadow-lg">
+        <div class=" backdrop-blur-sm">
+            <div class="bg-white/75 py-16 " style="margin:0 7%;">
+            <h2 class="text-center my-10 text-xl font-bold">
                 Selamat Datang di MovieDB - Jelajahi Dunia Film yang Tak Terbatas!
             </h2>
-            <div class="m-auto my-10 w-3/4 flex items-center">
-                <input type="text" class="w-full bg-transparent border-2 border-black p-2"
+            <div class="m-auto my-10 w-3/4 flex items-center rounded-lg overflow-hidden">
+                <input type="text" class="w-full bg-white/70  p-2 text-black placeholder:text-black outline-none"
                     placeholder="Cari sebuah Movie, TV-Series, Actor">
-                <input type="button" class="w-2/12 border-2 border-black p-2 border-l-0 cursor-pointer" value="Search">
+                <input type="button" class="w-2/12  p-2 border-l-0 cursor-pointer blue1 text-white" value="Search">
             </div>
         </div>
+        </div>
     </section>
-    <section class="m-2">
+    <section>
+    <div class="p-2 inline-block bg-white rounded-ss-xl rounded-se-xl  blue1" style="margin: 0 7%; margin-top: 25px;">
         <div class="flex items-center">
-            <span class="material-symbols-outlined mx-2 text-3xl">
-                trending_up
-            </span>
-            <h3 class="text-2xl font-bold">
-                Trending Movie
-            </h3>
+        <img src="image/icons8-trending-64.png" alt="" srcset="" style="width: 30px;">
+        <span class="text-2xl font-bold">
+            Trending Movie
+        </span>
         </div>
+    </div>
+    <div style="margin: 0 7%;" class=" bg-white p-4 rounded-2xl overflow-hidden rounded-ss-none">
         <div class="trendingMovie overflow-auto flex">
+
         </div>
-    </section>
+    </div></section>
+    <footer class="mt-4 bg-white">
+        Yehzkiel Haganta &copy; 2024
+    </footer>
     <script src="script/script.js"></script>
 </body>
 
