--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,7 @@
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/output.css">
     <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"/>
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 
 <body class="bg-zinc-200">
@@ -35,36 +36,38 @@
             </div>
         </div>
     </section>
-    <section>
-        <div class="p-2 inline-block rounded-ss-xl rounded-se-xl"
-            style="margin: 20px 7%;">
+    <section style="margin: 0 7%;">
+        <div class="flex items-center justify-between" style="margin: 20px 0;">
             <div class="flex items-center">
-                <img src="image/icons8-trending-64.png" alt="" srcset="" style="width: 30px;">
-                <span class="text-2xl font-bold mx-2">
-                    Trending Movie
-                </span>
+                <img src="image/movie-96.png" style="width: 35px">
+            <span class="text-2xl font-bold mx-3">
+                Trending Movie
+            </span>
             </div>
+            <select name="" id="" class="m-2 bg-white border-2 border-blue-500 rounded-md p-1 px-2 outline-none">
+                <option value="">Hari ini</option>
+                <option value="">Migggu ini</option>
+            </select>
         </div>
-        <div style="margin: 0 7%;" class="bg-white p-4 rounded-2xl overflow-hidden rounded-ss-none">
-            <div class="overflow-auto flex" id="Trending">
-
-            </div>
+        <div class="bg-white p-4 rounded-2xl overflow-hidden">
+            <div class="overflow-auto flex" id="Trending"></div>
         </div>
     </section>
-    <section>
-        <div class="p-2 inline-block rounded-ss-xl rounded-se-xl"
-            style="margin: 20px 7%;">
+    <section style="margin: 0 7%;">
+        <div class="flex items-center justify-between" style="margin: 20px 0;">
             <div class="flex items-center">
-                <img src="image/icons8-trending-64.png" alt="" srcset="" style="width: 30px;">
-                <span class="text-2xl font-bold mx-2">
-                   Terpopuler
-                </span>
+                <img src="image/tv-show-96.png" style="width: 35px">
+            <span class="text-2xl font-bold mx-3">
+                Trending TV Series
+            </span>
             </div>
+            <select name="" id="" class="m-2 bg-white border-2 border-blue-500 rounded-md p-1 px-2 outline-none">
+                <option value="">Hari ini</option>
+                <option value="">Migggu ini</option>
+            </select>
         </div>
-        <div style="margin: 0 7%;" class="bg-white p-4 rounded-2xl overflow-hidden rounded-ss-none">
-            <div class="overflow-auto flex" id="Popular">
-
-            </div>
+        <div class="bg-white p-4 rounded-2xl overflow-hidden">
+            <div class="overflow-auto flex" id="TrendingTV"></div>
         </div>
     </section>
     <footer class="mt-4 bg-white">
