Now can see rating movie/tv

--- a/index.html
+++ b/index.html
@@ -40,14 +40,10 @@
         <div class="flex items-center justify-between" style="margin: 20px 0;">
             <div class="flex items-center">
                 <img src="image/movie-96.png" style="width: 35px">
-            <span class="text-2xl font-bold mx-3">
-                Trending Movie
-            </span>
-            </div>
-            <select name="" id="" class="m-2 bg-white border-2 border-blue-500 rounded-md p-1 px-2 outline-none">
-                <option value="">Hari ini</option>
-                <option value="">Migggu ini</option>
-            </select>
+                <span class="text-2xl font-bold mx-3">
+                    Trending Movie
+                </span>
+            </div>        
         </div>
         <div class="bg-white p-4 rounded-2xl overflow-hidden">
             <div class="overflow-auto flex" id="Trending"></div>
@@ -57,14 +53,10 @@
         <div class="flex items-center justify-between" style="margin: 20px 0;">
             <div class="flex items-center">
                 <img src="image/tv-show-96.png" style="width: 35px">
-            <span class="text-2xl font-bold mx-3">
-                Trending TV Series
-            </span>
+                <span class="text-2xl font-bold mx-3">
+                    Trending TV
+                </span>
             </div>
-            <select name="" id="" class="m-2 bg-white border-2 border-blue-500 rounded-md p-1 px-2 outline-none">
-                <option value="">Hari ini</option>
-                <option value="">Migggu ini</option>
-            </select>
         </div>
         <div class="bg-white p-4 rounded-2xl overflow-hidden">
             <div class="overflow-auto flex" id="TrendingTV"></div>
