--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - Movie DB</title>
-    <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/output.css">
+    <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 
 <body class="bg-zinc-200">
-    <header class="p-4 flex justify-between items-center text-white blue2">
+    <header class="p-4 flex justify-between items-center text-white bg-header">
         <h2 class="logo text-3xl font-bold">MovieDB</h2>
         <nav class="float-righ">
             <ul class="flex text-gray-300">
@@ -43,10 +43,14 @@
                 <span class="text-2xl font-bold mx-3">
                     Trending Movie
                 </span>
-            </div>        
+            </div>
+            <div class="float-right">
+                <button class="py-1 px-2 bg-blue-500 text-white rounded-xl" onclick="setDayTrending(this)" value="movie">hari ini</button>
+                <button class="py-1 px-2 bg-white rounded-xl" onclick="setDayTrending(this)" value="movie">minggu ini</button>
+            </div>
         </div>
         <div class="bg-white p-4 rounded-2xl overflow-hidden">
-            <div class="overflow-auto flex" id="Trending"></div>
+            <div class="overflow-auto flex" id="Trendingmovie"></div>
         </div>
     </section>
     <section style="margin: 0 7%;">
@@ -57,9 +61,13 @@
                     Trending TV
                 </span>
             </div>
+            <div class="float-right">
+                <button class="py-1 px-2 bg-blue-500 text-white rounded-xl" onclick="setDayTrending(this)" value="tv">hari ini</button>
+                <button class="py-1 px-2 bg-white rounded-xl" onclick="setDayTrending(this)" value="tv">minggu ini</button>
+            </div>
         </div>
         <div class="bg-white p-4 rounded-2xl overflow-hidden">
-            <div class="overflow-auto flex" id="TrendingTV"></div>
+            <div class="overflow-auto flex" id="Trendingtv"></div>
         </div>
     </section>
     <footer class="mt-4 bg-white">
