--- a/index.html
+++ b/index.html
@@ -76,15 +76,17 @@
     </section>
     <section style="margin: 0 7%;">
         <div class="flex items-center">
-            <img src="image/tv-show-96.png" style="width: 35px">
+            <img src="image/tv-show-96.png" style="margin: 20px 0; width: 35px">
             <span class="text-2xl font-bold mx-3">
                Orang Yang Sedang Trend
             </span>
         </div>
-        
+        <div class="grid grid-cols-5 gap-5" id="People">
+
+        </div>
     </section>
     <section style="margin: 0 7%;">
-        <div class="flex items-center justify-between" style="margin: 20px 0;">
+        <div class="flex items-center justify-around">
             <div class="flex items-center">
                 <img src="image/upcoming.png" style="width: 35px">
                 <span class="text-2xl font-bold mx-3">
@@ -92,6 +94,7 @@
                 </span>
             </div>
             <div class="float-right">
+
             </div>
         </div>
         <div class="bg-white p-4 rounded-2xl overflow-hidden">
@@ -102,6 +105,7 @@
         Yehzkiel Haganta &copy; 2024
     </footer>
     <script src="script/script.js"></script>
+    <script src="script/script2.js"></script>
 </body>
 
 </html>
