--- a/index.html
+++ b/index.html
@@ -75,20 +75,17 @@
         </div>
     </section>
     <section style="margin: 0 7%;">
-        <div class="flex items-center">
-            <img src="image/tv-show-96.png" style="margin: 20px 0; width: 35px">
-            <span class="text-2xl font-bold mx-3">
+        <div class="flex items-center"  style="margin: 20px 0;">
+            <span class="text-2xl font-bold mx-3 my-5">
                Orang Yang Sedang Trend
             </span>
         </div>
-        <div class="grid grid-cols-5 gap-5" id="People">
-
-        </div>
+        <div class="grid grid-cols-6 gap-5" id="People"></div>
     </section>
     <section style="margin: 0 7%;">
-        <div class="flex items-center justify-around">
+        <div class="flex items-center" style="margin: 20px 0;">
             <div class="flex items-center">
-                <img src="image/upcoming.png" style="width: 35px">
+                <img src="image/upcoming.png" style="margin: 20px 0; width: 35px">
                 <span class="text-2xl font-bold mx-3">
                     Movie Mendatang
                 </span>
