--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                Orang Yang Sedang Trend
             </span>
         </div>
-        <div class="grid grid-cols-5 gap-5" id="People"></div>
+        <div class="grid grid-cols-6  gap-5" id="PopularPeople"></div>
     </section>
     <section style="margin: 0 7%;">
         <div class="flex items-center" style="margin: 20px 0;">
@@ -91,15 +91,16 @@
                 </span>
             </div>
             <div class="float-right">
-
             </div>
         </div>
         <div class="bg-white p-4 rounded-2xl overflow-hidden">
             <div class="overflow-auto flex" id="mendatang"></div>
         </div>
     </section>
-    <footer class="mt-4 bg-white">
-        Yehzkiel Haganta &copy; 2024
+    <footer class="mt-10 bg-white py-5">
+        <p class="text-lg text-center">
+            Yehzkiel Haganta | © Movie DB 2024
+        </p>
     </footer>
     <script src="script/script.js"></script>
     <script src="script/script2.js"></script>
