--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                 </select>
             </div>
         </div>
-        <div class="bg-white p-4 rounded-2xl overflow-hidden">
-            <div class="overflow-auto flex" id="Trendingmovie"></div>
+        <div class="rounded-2xl overflow-hidden">
+            <div class="overflow-auto flex scrollbar" id="Trendingmovie"></div>
         </div>
     </section>
     <section style="margin: 0 7%;">
@@ -70,8 +70,8 @@
                 </select>
             </div>
         </div>
-        <div class="bg-white p-4 rounded-2xl overflow-hidden">
-            <div class="overflow-auto flex" id="Trendingtv"></div>
+        <div class=" rounded-2xl overflow-hidden">
+            <div class="overflow-auto flex scrollbar" id="Trendingtv"></div>
         </div>
     </section>
     <section style="margin: 0 7%;">
@@ -93,8 +93,8 @@
             <div class="float-right">
             </div>
         </div>
-        <div class="bg-white p-4 rounded-2xl overflow-hidden">
-            <div class="overflow-auto flex" id="mendatang"></div>
+        <div class="rounded-2xl overflow-hidden">
+            <div class="overflow-auto flex scrollbar " id="mendatang"></div>
         </div>
     </section>
     <footer class="mt-10 bg-white py-5">
