--- a/person/index.html
+++ b/person/index.html
@@ -20,11 +20,11 @@
             </ul>
         </nav>
     </header>
-    <section id="personBiograph" style="margin:30px 7%;" class="flex">
-        <div class="border-2 border-black" >
-            <img src="" alt="" class="rounded-lg w-2/5" style="width: 300px;">
+    <section id="personBiograph" style="margin:30px 7%;" class="grid grid-cols-2">
+        <div class="border-2 border-black inline-block">
+            <img src="" alt="" class="rounded-lg" style="width: 300px;">
         </div>
-        <div class="px-5">
+        <div class="px-5 overflow-auto">
             <p id="Name" class="text-black text-3xl font-bold"></p>
             <p id="Biograph"></p>
             <p>Kelahiran  <span id="birth"></span></p>
