--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - Movie DB</title>
-    <link rel="stylesheet" href="style/output.css">
-    <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link rel="stylesheet" href="style/output.css">
+    <link rel="stylesheet" href="style/style.css">
 </head>
-
 <body class="bg-zinc-200">
     <header class="p-4 flex justify-between items-center text-white bg-header">
         <h2 class="logo text-3xl font-bold">MovieDB</h2>
@@ -36,56 +34,60 @@
             </div>
         </div>
     </section>
-    <section style="margin: 0 7%;">
-        <div class="flex items-center justify-between" style="margin: 20px 0;">
+    <section style="margin: 0 7%;" class="my-10">
+        <div class="flex items-center justify-between my-6">
             <div class="flex items-center">
-                <img src="image/movie-96.png" style="width: 35px">
+                <img src="image/movie-96.png" class="w-9">
                 <span class="text-2xl font-bold mx-3">
                     Trending Movie
                 </span>
             </div>
-            <div class="float-right">
-                <select name="movie" id="selectDay" class="outline-none border-2 border-blue-400 m-3 rounded-md p-1 bg-white px-1">
-                    <option value="day">Hari ini</option>
-                    <option value="week">Minggu ini</option>
-                </select>
-            </div>
+            <label class="float-right bg-white overflow-hidden text-lg rounded-3xl cursor-pointer" for="day">
+                <input type="checkbox" class="w-full absolute border-2" id="day">
+                <span class=" bg-blue-400 text-white p-2 rounded-3xl px-3" id="today">
+                    Hari ini
+                </span>
+                <span class="p-2rounded-3xl px-3" id="Thisweek">
+                    Mingguan
+                </span>
+            </label>
         </div>
-        <div class="rounded-2xl overflow-hidden">
-            <div class="overflow-auto flex scrollbar" id="Trendingmovie"></div>
+        <div class=" overflow-hidden ">
+            <div class="overflow-auto flex" id="Trendingmovie"></div>
         </div>
     </section>
-    <section style="margin: 0 7%;">
-        <div class="flex items-center justify-between" style="margin: 20px 0;">
+    <section style="margin: 0 7%;" class="my-10">
+        <div class="flex items-center justify-between my-6">
             <div class="flex items-center">
-                <img src="image/tv-show-96.png" style="width: 35px">
+                <img src="image/tv-show-96.png" class="w-9">
                 <span class="text-2xl font-bold mx-3">
                     Trending TV
                 </span>
             </div>
             <div class="float-right">
-                <select name="" id="selectDay" class="outline-none border-2 border-blue-400 m-3 rounded-md p-1 bg-white px-1">
+                <select name="" id="selectDay"
+                    class="outline-none border-2 border-blue-400 mx-3 rounded-md p-1 bg-white px-1">
                     <option value="day">Hari ini</option>
                     <option value="week">Minggu ini</option>
                 </select>
             </div>
         </div>
-        <div class=" rounded-2xl overflow-hidden">
+        <div class="  overflow-hidden">
             <div class="overflow-auto flex scrollbar" id="Trendingtv"></div>
         </div>
     </section>
-    <section style="margin: 0 7%;">
-        <div class="flex items-center"  style="margin: 20px 0;">
+    <section style="margin: 0 7%;" class="my-10">
+        <div class="flex items-center">
             <span class="text-2xl font-bold mx-3 my-5">
-               Orang Yang Sedang Trend
+                Orang Yang Sedang Trend
             </span>
         </div>
         <div class="grid grid-cols-6  gap-5" id="PopularPeople"></div>
     </section>
-    <section style="margin: 0 7%;">
-        <div class="flex items-center" style="margin: 20px 0;">
+    <section style="margin: 0 7%;" class="my-10">
+        <div class="flex items-center my-6">
             <div class="flex items-center">
-                <img src="image/upcoming.png" style="margin: 20px 0; width: 35px">
+                <img src="image/upcoming.png" class="w-9">
                 <span class="text-2xl font-bold mx-3">
                     Movie Mendatang
                 </span>
@@ -93,7 +95,7 @@
             <div class="float-right">
             </div>
         </div>
-        <div class="rounded-2xl overflow-hidden">
+        <div class=" overflow-hidden">
             <div class="overflow-auto flex scrollbar " id="mendatang"></div>
         </div>
     </section>
